Add Page Product

--- a/PharmacyDeliverySystem/Views/Home/Index.cshtml
+++ b/PharmacyDeliverySystem/Views/Home/Index.cshtml
@@ -53,6 +53,14 @@
             </svg>
             <div class="cat-title">Men Care</div>
         </a>
+        <a asp-controller="Products" asp-action="Index" class="cat-card">
+            <svg class="cat-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M3 7h18v13H3z"></path>
+                <path d="M3 7l9-4 9 4"></path>
+            </svg>
+            <div class="cat-title">Products</div>
+        </a>
+
     </div>
 </section>
 
